--- a/DBMS/templates/map_dashboard.html
+++ b/DBMS/templates/map_dashboard.html
@@ -107,6 +107,6 @@ function initMap() {
 
 <!-- ✅ Load Google Maps JavaScript API -->
 <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDa6JfHpSixfrXkABi4CUSXIvZjAhP0TEc&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=">
 </script>
 {% endblock %}
