Remove Google Maps API key from template
Removed the API key from the Google Maps script tag for security reasons.

--- a/DBMS/templates/request_details.html
+++ b/DBMS/templates/request_details.html
@@ -435,7 +435,7 @@ button, .btn, a.btn {
 <!-- ====== Collector Map JS ====== -->
 {% if active_profile.role == 'collector' %}
   {% set gmaps_script %}
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDa6JfHpSixfrXkABi4CUSXIvZjAhP0TEc"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key="></script>
   <script type="application/json" id="map-data">
     {
       "disposer": {{ disposer_loc | tojson }},
